<resources>
    <string name="app_name">RevintonPay</string>
    <string name="places">Places</string>
    <string name="reservations">Reservations</string>
    <string name="reservation">Reservation</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="welcome_message">Welcome, %1$s</string>
    <string name="payment_methods">PAYMENT METHODS</string>
    <string name="connections">CONNECTIONS</string>
    <string name="history">HISTORY</string>
    <string name="settings">SETTINGS</string>
    <string name="pick_date_and_time">PICK DATE AND TIME</string>
    <string name="special_offers">SPECIAL OFFERS</string>
    <string name="add_people">ADD PEOPLE</string>
    <string name="open">OPEN</string>
    <string name="only_me">ONLY ME</string>
    <string name="tap_to_add_friends">Tap to add friends</string>
    <string name="complete">Complete</string>
</resources>