<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/places"
        android:enabled="true"
        android:icon="@drawable/ic_places"
        android:title="@string/places" />

    <item
        android:id="@+id/reservations"
        android:enabled="true"
        android:icon="@drawable/ic_reservations"
        android:title="@string/reservations" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
</menu>