<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="uiModel"
            type="com.revinton.pay.ui.create_reservation.CreateReservationUiModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_color"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setImageFromUrl="@{uiModel.placeImageUrl}" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:shadowColor="@color/colorPrimaryDark"
                        android:shadowDx="-2"
                        android:shadowDy="-2"
                        android:shadowRadius="1"
                        android:text="@{uiModel.placeName}"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/pick_date_and_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CalendarView
                        android:id="@+id/calendarPicker"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:timePickerMode="spinner"
                        app:set24hoursFormat="@{true}" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/special_offers"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/offersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/add_people"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="130dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        app:cardCornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:padding="16dp"
                            android:src="@drawable/ic_add_friend"
                            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/peopleRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/pink_out_line"
                    android:checkedButton="@+id/offer"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/search"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toogle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/open"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp" />

                    <RadioButton
                        android:id="@+id/offer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toogle_widget_background"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/only_me"
                        android:textColor="@color/colorWhite"
                        android:textSize="22sp" />
                </RadioGroup>
                <!--TODO add complete button-->
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>
</layout>